<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ToutDouxApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="icon">Icon</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string-array name="pages">
        <item>All tasks</item>
        <item>To do</item>
        <item>Done</item>
        <item>Categories</item>
    </string-array>
    <string name="title_activity_task">Task details</string>
    <string name="title_activity_add_task">New task</string>
    <string name="title_activity_categories_list">My categories</string>
    <string name="title_activity_add_category">New category</string>
    <string name="hint_title">Title</string>
    <string name="hint_date">Date</string>
    <string name="hint_time">Time</string>
    <string name="hint_description">Description</string>
    <string name="hint_color">#FFFFFF (optional)</string>
    <string name="task_add">New task</string>
    <string name="task_order">Order task</string>
    <string name="task_submit">Submit</string>
    <string name="task_validate">Done</string>
    <string name="task_undo">Undo</string>
    <string name="task_edit">Edit</string>
    <string name="task_delete">Delete</string>
    <string name="category_add">New category</string>
    <string name="category_create">Create category</string>
    <string name="category_empty">No category</string>
    <string name="description_category">Category</string>
</resources>
