<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/lightergrey">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:ems="10"
                android:hint="@string/hint_title"
                android:background="@color/white"
                android:paddingTop="10dip"
                android:paddingBottom="15dip"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:textColor="@color/darkgrey"
                android:textColorHint="@color/grey">

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/color"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:ems="10"
                android:hint="@string/hint_color"
                android:background="@color/white"
                android:paddingTop="10dip"
                android:paddingBottom="15dip"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:textColor="@color/darkgrey"
                android:textColorHint="@color/grey"/>

        </LinearLayout>

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_create"
            android:onClick="submitForm" />

    </LinearLayout>

</ScrollView>