<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/category_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp">

        <LinearLayout
            android:id="@+id/category_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:layout_marginRight="10dp">

            <ImageView
                android:contentDescription="@string/description_category"
                android:layout_width="10dip"
                android:layout_height="10dip" />

        </LinearLayout>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#040404"
            android:typeface="sans"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/category_pannel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/category_content"
        android:orientation="horizontal"
        android:background="@color/lightergrey"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:visibility="gone"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/editCategory"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginRight="5dp"
            android:background="@color/grey"
            android:text="@string/task_edit"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <Button
            android:id="@+id/deleteCategory"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:background="@color/danger"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:text="@string/task_delete" />

    </LinearLayout>

</RelativeLayout>
